--- a/Apptakecare/src/main/resources/templates/contaUsuario.html
+++ b/Apptakecare/src/main/resources/templates/contaUsuario.html
@@ -8,27 +8,50 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 	
+	<style type="text/css">
+	#navConta{
+		width:300px;
+		border-radius: 15px;
+		float:left;
+	}
+	#navDados{
+		margin-left:15px;
+	}
+	
+	</style>
 </head>
 <body  >
 
 
-<nav class="navbar navbar-dark bg-dark">
- 		<a style="margin-left: 20px;" class="navbar-brand" href="/">TakeCare</a>
+<nav id="navConta" class="navbar navbar-dark bg-dark">
+ 		<a style="margin-left: 20px;" class="navbar-brand" href="/contaUsuario">TakeCare</a>
      <div class="container-fluid">
    
-    <button style="margin-left: 100px; margin-top: -40px;" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+    <button style="margin-left: 200px; margin-top: -40px;" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navDados" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     </div>
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+    <div  class="collapse navbar-collapse" id="navDados">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
       
       <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/login">Login</a>
+          <a class="nav-link active" aria-current="page" href="/meusDados">Meus Dados</a>
         </li>
       
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/opcaoCadastro">Cadastro</a>
+          <a class="nav-link active" aria-current="page" href="/lojas">Lojas</a>
+        </li>
+        
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/agendamentos">Agendamentos</a>
+        </li>
+        
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/configuracao">Configurações</a>       
+        </li>
+        
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/logoff">Sair</a>
         </li>
         
         
@@ -37,12 +60,10 @@
 
 </nav>
 <div >
-			<div  >
-				<h2>Bem vindo Sr.(a) <span ${usuarioLogin.nome}></span></h2>
-			</div>
 			
-			<div  th:each="e :${usuarioLogado}">
-				<h2>Bem vindo Sr.(a) <span th:text="${e.nome}"></span></h2>
+			
+			<div style="margin-left:40%; ">
+				<h2>Bem vindo Sr.(a):  <span th:text="${session.usuarioLogado.nome}"></span></h2>
 			</div>
 
 
