--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,84 +1,319 @@
 @charset "UTF-8";
 
 
-	#navConta{
-		width:300px;
-		border-radius: 15px;
-		position:fixed;
-		top:0px;
-	}
-	#navDados{
-		margin-left:15px;
-	}
-	
-	#primeiro{
-		float:left;
-		width:40%;
-	}
-	
-	#segundo{
-		float:right;
-	}
-	#button{
-		float:rigth;
-	}
-	a{
-		color:white;
-		text-decoration:none;
-	}
-	a:hover{
-		color:white;
-		opacity:0.5;
-		background: black;
-	}
-	
-	
-	
-	#list-tab{
-		width:400px;
-		border-radius:20px;
-		text-align:center;
-	}
-	
-		/******listaestabelecimento********/
-	
-	#listaEstabelecimento{
-			width:500px;
-			 margin-left:30%; 
-			 margin-top:10%;
-			 background-color:gray;
-			 border:black solid;
-	}
-	
-	/******estabelecimento********/
-	
-	#lista{
-	
-		width:50%;
-		height:50%;
-		margin-left:30%; 
-		margin-top:10%;
-		background-color:gray;
-		border:black solid;
-	}
-	
-	#portifolio{
-		height:300px;
-		float:right;
-		margin-right:40px;
-		
-	
-	}
-	#carouselExampleIndicators{
-		width:500px;
-		height:150px;
-	}
-	
-	#infomacoes{
-		width:200px;
-		border:solid red;
-		
-	
-	}
-	
-	
+#navConta {
+	width: 300px;
+	border-radius: 15px;
+	position: fixed;
+	top: 0px;
+}
+
+#navDados {
+	margin-left: 15px;
+}
+
+#primeiro {
+	float: left;
+	width: 40%;
+}
+
+#segundo {
+	float: right;
+}
+
+#button {
+	float: rigth;
+}
+
+a {
+	color: white;
+	text-decoration: none;
+}
+
+a:hover {
+	color: white;
+	opacity: 0.5;
+	background: black;
+}
+
+
+
+#list-tab {
+	width: 400px;
+	border-radius: 20px;
+	text-align: center;
+}
+
+/******listaestabelecimento********/
+
+#listaEstabelecimento {
+	width: 500px;
+	margin-left: 30%;
+	margin-top: 10%;
+	background-color: gray;
+	border: black solid;
+}
+
+/******estabelecimento********/
+
+#lista {
+
+	width: 50%;
+	height: 50%;
+	margin-left: 30%;
+	margin-top: 10%;
+	background-color: gray;
+	border: black solid;
+}
+
+#portifolio {
+	height: 300px;
+	float: right;
+	margin-right: 40px;
+
+
+}
+
+#carouselExampleIndicators {
+	width: 500px;
+	height: 150px;
+}
+
+#infomacoes {
+	width: 200px;
+	border: solid red;
+
+
+}
+
+
+
+
+
+/**********pagina de inicio  do site(index)***********/
+
+.home {
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	align-items: center;
+	justify-content: space-beween;
+	padding: 0px 10%;
+	border: black solid;
+
+	background-image: linear-gradient(to bottom, #283547, black);
+
+
+
+	/*background-image: url('/img/tela.png');
+		background-size: 100%;*/
+
+	/*background-image: linear-gradient(to bottom, red ,black );*/
+
+	/*background-image: url('/img/tela.png');*/
+
+}
+
+
+.home-text {
+	max-width: 37rem;
+
+
+}
+
+.home-text .text-h4 {
+	font-size: 1.5rem;
+	color: #A3AAAF;
+	margin-bottom: 1rem;
+
+
+}
+
+
+.home-text .text-h1 {
+	font-size: 4rem;
+	color: #A3AAAF;
+	margin-bottom: 1rem;
+	line-height: 4rem;
+}
+
+.home-text p {
+	margin-bottom: 4rem;
+	color: #A3AAAF;
+
+}
+
+
+.home-img img {
+	width: 100%;
+
+}
+
+
+/**********pagina login ***********/
+
+#email {
+	width: 300px;
+}
+
+#senha {
+	width: 300px;
+}
+
+#conteinerLogin {
+	margin-left: 33%;
+	margin-bottom: 10px;
+}
+
+.btn btn-dark {
+	margin-top: 10px;
+}
+
+#botaocadastro {
+	margin-top: 10px;
+	margin-left: 33%;
+}
+
+
+
+
+.tela-login {
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	align-items: center;
+	justify-content: space-beween;
+	padding: 0px 10%;
+	border: black solid;
+	background-image: url('/img/telaicon.png');
+
+
+}
+
+#conteinerLogin .text-h1 {
+
+	font-size: 3rem;
+	margin-bottom: 4rem;
+	line-height: 4rem;
+}
+
+
+
+/**********pagina opção de cadastro ***********/
+
+.opcao-cadastro {
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	align-items: center;
+	justify-content: space-beween;
+	padding: 0px 10%;
+	border: black solid;
+	background-image: url('/img/telaicon.png');
+
+}
+
+
+
+.cadastro-text .text-h1 {
+	font-size: 3rem;
+	color: black;
+	margin-bottom: 1rem;
+	line-height: 4rem;
+	width: 50%;
+	height: 50vh;
+	margin-left: 110%;
+}
+
+
+.cadastro-button {
+
+	margin-left: 80px;
+	font-size: 3rem;
+
+}
+
+/**********pagina cadastro cliente ***********/
+
+#primeiro {
+	float: left;
+}
+
+#segundo {
+	float: right;
+}
+
+#button {
+	float: rigth;
+}
+
+a {
+	color: white;
+	text-decoration: none;
+}
+
+a:hover {
+	color: white;
+}
+
+
+
+.cadastro-cliente {
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	align-items: center;
+	justify-content: space-beween;
+	padding: 0px 10%;
+	border: black solid;
+	background-image: url('/img/tela1.png');
+
+
+	/*background-color: red;*/
+
+
+
+
+}
+
+
+
+/**********pagina cadastro Empresa ***********/
+
+
+#primeiro {
+	float: left;
+}
+
+#segundo {
+	float: right;
+}
+
+#button {
+	float: rigth;
+}
+
+a {
+	color: white;
+	text-decoration: none;
+}
+
+a:hover {
+	color: white;
+
+
+}
+
+.cadastro-empresa {
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	align-items: center;
+	justify-content: space-beween;
+	padding: 0px 10%;
+	border: black solid;
+	background-image: url('/img/tela1.png');
+
+
+	/*background-color: red;*/
+}
