--- a/src/main/resources/templates/opcaoCadastro.html
+++ b/src/main/resources/templates/opcaoCadastro.html
@@ -1,75 +1,90 @@
-<!DOCTYPE html >
+<!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="UTF-8">
-<title>Inicio</title>
+	<meta charset="UTF-8">
+	<title>Inicio</title>
 
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-	
-	<style>
-	#centrar{
-		display:flex;
-		margin: 5% 10% 40% 40%;
-		
-	}
-	h1{
-		margin: 5% 10% 5% 40%;
-	}
-	
-	a{
-		text-decoration:none;
-		
-	}
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+		crossorigin="anonymous"></script>
 
-	
-	a:hover{
-		color:white;
-	}
-	
-	</style>
-	
+
+	<link rel="stylesheet" type="text/css" media="all" href="../static/css/style.css" th:href="@{/css/style.css}" />
+
+
+
+
 </head>
+
 <body>
 
-<nav class="navbar navbar-dark bg-dark">
- 		<a style="margin-left: 20px;" class="navbar-brand" href="/">TakeCare</a>
-     <div class="container-fluid">
-   
-    <button style="margin-left: 100px; margin-top: -40px;" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    </div>
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-      
-      <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/login">Login</a>
-        </li>
-      
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/opcaoCadastro">Cadastro</a>
-        </li>
-        
-        
-      </ul>
-      </div>
+	<header>
 
-</nav>
+		<nav class="navbar navbar-dark bg-dark">
+			<a style="margin-left: 20px;" class="navbar-brand" href="/">TakeCare</a>
+			<div class="container-fluid">
 
-						<h1 >AppTakeCare</h1>	
-					<div id="centrar">
-					
-					
-						<a id="b"  class="btn btn-dark"   href="/cadastroCliente">cliente</a>
-						
-						<a  style="margin-left: 20px;" class="btn btn-dark"  href="/cadastroEmpresa">Empresa</a>
-					</div>
+				<button style="margin-left: 100px; margin-top: -40px;" class="navbar-toggler" type="button"
+					data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02"
+					aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+			</div>
+			<div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" href="/login">Login</a>
+					</li>
+
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" href="/opcaoCadastro">Cadastro</a>
+					</li>
+
+
+				</ul>
+			</div>
+
+		</nav>
+	</header>
 
 
 
+	<main>
+
+		<section class="opcao-cadastro">
+
+
+			<div class="cadastro-text">
+
+				<h1 class="text-h1">AppTakeCare</h1>
+
+			</div>
+
+
+
+			<div class="cadastro-button">
+
+
+
+				<a id="cliente-button" class="btn btn-dark" href="/cadastroCliente">cliente</a>
+
+				<a id="empresa-button" style="margin-left: 20px;" class="btn btn-dark"
+					href="/cadastroEmpresa">Empresa</a>
+
+			</div>
+
+
+
+
+		</section>
+	</main>
 
 
 
 </body>
+
 </html>
