--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 
+
 @import url('./Geral/geral.css');
 @import url('./Geral/navBar.css');
 @import url('./Geral/index.css');
@@ -7,6 +8,9 @@
 @import url('./Geral/opcaoCadastro.css');
 @import url('./Geral/login.css');
 @import url('./Geral/cadastroUsuario.css');
+@import url('./Geral/esqueciSenha.css');
+
+
 
 @import url('./Empresa/portifolio.css');
 @import url('./Empresa/agendamento.css');
