--- a/src/main/resources/static/css/Geral/navBar.css
+++ b/src/main/resources/static/css/Geral/navBar.css
@@ -1,52 +1,115 @@
+#navConta {
+    width: 20%;
+
+    height: 100vh;
+
+    min-width: 150px;
+    min-height: 150px;
 
 
-#navConta{
-  width:20%;
-  min-width: 150px;
-  height:100vh;
-  
-   
 }
 
-.nav-item{
+
+#navbarempresa {
+
+    width: 20%;
+    height: 100vh;
+
+
+}
+
+
+
+.nav-item {
     width: 40vh;
     padding: 5px;
 
 }
-#liLogo{
-	 padding: 0px;
-	 margin-left: 4%;
+
+#liLogo {
+    padding: 0px;
+    margin-left: 4%;
 }
-.nav-link{
-    padding:15px;
+
+.nav-link {
+    padding: 15px;
 }
-#navDados{
-    margin-left:15px;
+
+#navDados {
+    margin-left: 15px;
 }
-a#linkLogo:hover{
-	opacity:1;
-	background:0 ;
+
+a#linkLogo:hover {
+    opacity: 1;
+    background: 0;
 }
-#imagemLogo{
-	width:25vh;
-	min-width: 20vh;
+
+#imagemLogo {
+    width: 25vh;
+    min-width: 20vh;
 }
-a{
-    color:white;
-    text-decoration:none;
+
+
+
+a {
+    color: white;
+    text-decoration: none;
     cursor: pointer;
 }
-a:hover{
-    color:white;
-    opacity:0.5;
+
+a:hover {
+    color: white;
+    opacity: 0.5;
     background: black;
 }
 
 
 
 
-#list-tab{
-    width:400px;
-    border-radius:20px;
-    text-align:center;
+#list-tab {
+    width: 400px;
+    border-radius: 20px;
+    text-align: center;
 }
+
+
+
+
+
+
+
+
+/* 
+
+#scrollbar {
+    width: 600px;
+    height: 600px;
+    background-color: red;
+    overflow: scroll;
+}
+
+/* scrollbar
+
+
+.scrollbar-pink::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+    background-color: #F5F5F5;
+    border-radius: 10px;
+}
+
+.scrollbar-pink::-webkit-scrollbar {
+    width: 12px;
+    background-color: #F5F5F5;
+}
+
+.scrollbar-pink::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+    background-color: #ec407a;
+}
+
+.scrollbar-pink {
+    scrollbar-color: #ec407a #F5F5F5;
+}
+
+*/
